cmake_minimum_required(VERSION 2.8.3)
project(lkh_tsp_solver)

set(CMAKE_BUILD_TYPE "Release")
set(CMAKE_CXX_FLAGS "-O3 -Wall")

include_directories(SRC/INCLUDE)

add_library(lkh_tsp_solver SRC/Activate.c
                           SRC/AddCandidate.c
                           SRC/AddExtraCandidates.c
                           SRC/AddTourCandidates.c
                           SRC/AdjustCandidateSet.c
                           SRC/AdjustClusters.c
                           SRC/AllocateStructures.c
                           SRC/Ascent.c
                           SRC/Best2OptMove.c
                           SRC/Best3OptMove.c
                           SRC/Best4OptMove.c
                           SRC/Best5OptMove.c
                           SRC/BestKOptMove.c
                           SRC/Between.c
                           SRC/Between_SL.c
                           SRC/Between_SSL.c
                           SRC/BridgeGain.c
                           SRC/BuildKDTree.c
                           SRC/CandidateReport.c
                           SRC/C.c
                           SRC/ChooseInitialTour.c
                           SRC/Connect.c
                           SRC/CreateCandidateSet.c
                           SRC/CreateDelaunayCandidateSet.c
                           SRC/CreateNNCandidateSet.c
                           SRC/Create_POPMUSIC_CandidateSet.c
                           SRC/CreateQuadrantCandidateSet.c
                           SRC/Delaunay.c
                           SRC/Distance.c
                           SRC/Distance_SPECIAL.c
                           SRC/eprintf.c
                           SRC/ERXT.c
                           SRC/Excludable.c
                           SRC/Exclude.c
                           SRC/FindTour.c
                           SRC/FixedOrCommonCandidates.c
                           SRC/Flip.c
                           SRC/Flip_SL.c
                           SRC/Flip_SSL.c
                           SRC/Forbidden.c
                           SRC/FreeStructures.c
                           SRC/fscanint.c
                           SRC/Gain23.c
                           SRC/GenerateCandidates.c
                           SRC/Genetic.c
                           SRC/GeoConversion.c
                           SRC/GetTime.c
                           SRC/gpx.c
                           SRC/GreedyTour.c
                           SRC/Hashing.c
                           SRC/Heap.c
                           SRC/IsBackboneCandidate.c
                           SRC/IsCandidate.c
                           SRC/IsCommonEdge.c
                           SRC/IsPossibleCandidate.c
                           SRC/KSwapKick.c
                           SRC/LinKernighan.c
                           SRC/LKH.c                           
                           SRC/Make2OptMove.c
                           SRC/Make3OptMove.c
                           SRC/Make4OptMove.c
                           SRC/Make5OptMove.c
                           SRC/MakeKOptMove.c
                           SRC/MergeTourWithBestTour.c
                           SRC/MergeWithTourCLARIST.c
                           SRC/MergeWithTourGPX2.c
                           SRC/MergeWithTourIPT.c
                           SRC/Minimum1TreeCost.c
                           SRC/MinimumSpanningTree.c
                           SRC/NormalizeNodeList.c
                           SRC/NormalizeSegmentList.c
                           SRC/OrderCandidateSet.c
                           SRC/PatchCycles.c
                           SRC/printff.c
                           SRC/PrintParameters.c
                           SRC/Random.c
                           SRC/ReadCandidates.c
                           SRC/ReadEdges.c
                           SRC/ReadLine.c
                           SRC/ReadParameters.c
                           SRC/ReadPenalties.c
                           SRC/ReadProblem.c
                           SRC/RecordBestTour.c
                           SRC/RecordBetterTour.c
                           SRC/RemoveFirstActive.c
                           SRC/ResetCandidateSet.c
                           SRC/RestoreTour.c
                           SRC/SegmentSize.c
                           SRC/Sequence.c
                           SRC/SFCTour.c
                           SRC/SolveCompressedSubproblem.c
                           SRC/SolveDelaunaySubproblems.c
                           SRC/SolveKarpSubproblems.c
                           SRC/SolveKCenterSubproblems.c
                           SRC/SolveKMeansSubproblems.c
                           SRC/SolveRoheSubproblems.c
                           SRC/SolveSFCSubproblems.c
                           SRC/SolveSubproblemBorderProblems.c
                           SRC/SolveSubproblem.c
                           SRC/SolveTourSegmentSubproblems.c
                           SRC/Statistics.c
                           SRC/StoreTour.c
                           SRC/SymmetrizeCandidateSet.c
                           SRC/TrimCandidateSet.c
                           SRC/WriteCandidates.c
                           SRC/WritePenalties.c
                           SRC/WriteTour.c)

target_link_libraries(lkh_tsp_solver)

add_executable(lkh_tsp SRC/LKHmain.c)
target_link_libraries(lkh_tsp lkh_tsp_solver)
